# quadruped_ros2_control

./: .gitignore  DEVELOPMENT_LOG.md  README.md  WORK_REPORT.md  read.md  read（复件）.md  最终prompt.md
.cursor/rules/: read-development-log.mdc
champ/champ_base/src/: quadruped_controller.cpp
src/dog2_bringup/: README.md  package.xml  setup.cfg  setup.py
src/dog2_bringup/config/: research_mpc.yaml  smoke_test.yaml  system_rates.yaml  system_topics.yaml
src/dog2_bringup/doc/: ARCHITECTURE.md  INTERFACES.md  NAMING_CONVENTIONS.md  TROUBLESHOOTING.md
src/dog2_bringup/dog2_bringup/: __init__.py  cmd_vel_teleop.py  crossing_check.py  crossing_trigger.py  mpc_debug_adapter.py  smoke_check.py  wbc_debug_adapter.py  wbc_effort_mux.py
src/dog2_bringup/launch/: control_stack.launch.py  crossing_trial.launch.py  effort_research_sim.launch.py  sim_base.launch.py  smoke_test.launch.py  system.launch.py  visualization.launch.py  window_crossing_test.launch.py
src/dog2_bringup/resource/: dog2_bringup
src/dog2_bringup/test/: test_bringup_files.py  test_research_stack_files.py
src/dog2_bringup/worlds/: flat_ground.sdf  step_block.sdf  window_frame.sdf
src/dog2_description/: CMakeLists.txt  GAZEBO_CONTROL_FIX.md  README_JOINT_LIMITS.md  URDF_LAYERING_LEDGER.md
src/dog2_description/config/: migration_stage2_stand.json  ros2_controllers.yaml
src/dog2_description/doc/: base_frame_migration.txt
src/dog2_description/scripts/: check_joint_semantics.py  check_urdf_shift_boundary.py  export_dog2_urdf.py  verify_stage2_rail_geometry.py
src/dog2_description/urdf/: dog2.urdf.xacro
src/dog2_dynamics/src/: dog2_model.cpp
src/dog2_gait_planner/: CMakeLists.txt  package.xml
src/dog2_gait_planner/config/: gait_scheduler.yaml
src/dog2_gait_planner/dog2_gait_planner/: __init__.py  gait_scheduler_node.py
src/dog2_gait_planner/launch/: gait_scheduler.launch.py
src/dog2_gait_planner/test/: test_gait_scheduler.py
src/dog2_interfaces/: CMakeLists.txt  package.xml
src/dog2_interfaces/msg/: ContactPhase.msg  ContactState.msg  ControllerMode.msg  FootState.msg  FootTrajectory.msg  GRFReference.msg  GaitCommand.msg  MPCDebug.msg  MPCHorizon.msg  RobotState.msg  SystemMode.msg  TaskStatus.msg  WBCDebug.msg
src/dog2_interfaces/srv/: SetRailMode.srv
src/dog2_motion_control/: package.xml  setup.py
src/dog2_motion_control/config/: gait_params.yaml  gait_params_fast.yaml  gait_params_ros.yaml
src/dog2_motion_control/dog2_motion_control/: config_loader.py  gz_gain_setter.py  gz_pose_to_odom.py  gz_startup_gate.py  joint_controller.py  joint_names.py  joint_semantics.py  leg_parameters.py  mpc_robot_controller.py  spider_robot_controller.py  urdf_joint_limits.py
src/dog2_motion_control/launch/: spider_gazebo_complete.launch.py  spider_gazebo_mpc.launch.py  spider_gazebo_position.launch.py
src/dog2_motion_control/scripts/: test_kinematics_consistency.py
src/dog2_motion_control/test/: test_config_loader.py  test_joint_controller.py  test_kinematics.py  test_lf_zero_pose_se3.py  test_urdf_joint_limits_sync.py
src/dog2_mpc/include/dog2_mpc/: mpc_controller.hpp
src/dog2_mpc/src/: crossing_state_machine.cpp  mpc_controller.cpp  mpc_node_16d.cpp  mpc_node_complete.cpp  sliding_constraints.cpp  trajectory_generator.cpp
src/dog2_state_estimation/: CMakeLists.txt  README.md  package.xml
src/dog2_state_estimation/config/: estimator.yaml
src/dog2_state_estimation/dog2_state_estimation/: __init__.py  sim_state_estimator_node.py
src/dog2_state_estimation/launch/: state_estimation.launch.py
src/dog2_state_estimation/test/: test_state_estimator.py
src/dog2_visualization/: CMakeLists.txt  package.xml  setup.cfg
src/dog2_visualization/dog2_visualization/: crossing_visualization_node.py  visualization_node.py
src/dog2_wbc/src/: wbc_node_complete.cpp
