<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dog2_bringup</name>
  <version>0.1.0</version>
  <description>Unified bringup, launch, smoke test, teleop, and adapter package for Dog2.</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>dog2_description</depend>
  <depend>dog2_gait_planner</depend>
  <depend>dog2_interfaces</depend>
  <depend>dog2_motion_control</depend>
  <depend>dog2_mpc</depend>
  <depend>dog2_state_estimation</depend>
  <depend>dog2_visualization</depend>
  <depend>dog2_wbc</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
